--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/**/**.spec.js",
-    "start": "node --experimental-modules src/index.mjs"
+    "test": "mocha --require babel-core/register src/**/**.spec.js",
+    "start": "node src/"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,12 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "joi": "^13.2.0"
+    "joi": "^13.2.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "mocha": "^5.1.1"
   }
