--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require babel-core/register src/**/**.spec.js",
-    "start": "node src/"
+    "test": "mocha --require babel-register src/**/**.spec.js",
+    "start": "node scripts/start-dev.js"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "faker": "^4.1.0",
     "mocha": "^5.1.1"
   }
 }
