--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --exit --require babel-register --timeout 5000 src/**/**.spec.js test/**.test.js",
     "dev": "node src",
     "compile": "rm -rf dist/ && babel src --out-dir dist --ignore spec.js,test.js",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "preview": "npm install && npm run compile && PORT=3000 npm run start"
   },
   "repository": {
     "type": "git",
